# Router

./: .gitignore  README.md  pyproject.toml
data/: evals.json  evals_test_500_v0.json  tool_descriptions.json  tool_descriptions_v1.json  tools.json  tools_v1.json
notebooks/: dataset_analysis.ipynb  dataset_analysis_v1.ipynb  evaluate_models.ipynb  ollama_test.ipynb
router/: embedding_router.py  evals.py  train_model.py  train_model_2.py  utils.py
scripts/: generate_integration_descriptions.py  generate_sft_data.py
