[project]
name = "router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "accelerate>=0.26.0",
    "deepspeed>=0.17.2",
    "dspy>=2.6.27",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "mlx-embeddings>=0.0.3",
    "ninja>=1.11.1.4",
    "nvitop>=1.5.1",
    "ollama>=0.5.1",
    "openai>=1.93.1",
    "packaging>=25.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "wandb>=0.21.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["router*"]
